--- a/app/src/main/res/layout/activity_account.xml
+++ b/app/src/main/res/layout/activity_account.xml
@@ -36,7 +36,11 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginLeft="100dp"
-                    android:text="John Doe"
+                    android:autoSizeMaxTextSize="100sp"
+                    android:autoSizeMinTextSize="12sp"
+                    android:autoSizeStepGranularity="1sp"
+                    android:autoSizeTextType="uniform"
+                    android:hint="Username"
                     android:textColor="#fff"
                     android:textSize="21sp"
                     android:textStyle="bold" />
@@ -66,6 +70,8 @@
                     android:layout_gravity="center_horizontal"
                     android:layout_marginLeft="100dp"
                     android:layout_marginBottom="10dp"
+                    android:maxLength="10"
+                    android:maxLines="1"
                     android:hint="New username"
                     android:textColor="#fff"
                     android:visibility="invisible"/>
@@ -103,9 +109,10 @@
                     android:orientation="vertical">
 
                     <TextView
+                        android:id="@+id/premiumTextcheck"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Premium"
+                        android:text="Buy premium"
                         android:textSize="20sp"
                         android:textColor="@color/graylight"
                         />
@@ -120,6 +127,7 @@
                     android:orientation="vertical">
 
                     <ImageView
+                        android:id="@+id/premiumButton"
                         android:layout_width="36dp"
                         android:layout_height="36dp"
                         app:tint="@color/startblue"
