--- a/app/src/main/res/menu/menu_acc.xml
+++ b/app/src/main/res/menu/menu_acc.xml
@@ -1,9 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <item
+        android:id="@+id/action_search"
+        android:icon="@drawable/ic_search"
+        app:showAsAction="ifRoom|collapseActionView"
+        app:actionViewClass="android.widget.SearchView"
+        android:title="Search"/>
+
     <item
         android:id="@+id/action_fav"
         android:icon="@drawable/ic_account"
         app:showAsAction="ifRoom"
         android:title="@string/app_name"/>
+
+
+
+
 </menu>
